# yeast-crispri

./: .gitignore  README.md
barcode_v1_181005/: grna-assign-barcode-fates.txt
barcode_v1_181005/assignment/: assign_bc_to_grna.sh  targeting.R
barcode_v1_181005/assignment/barcode-assign-0.1/: Cargo.toml
barcode_v1_181005/assignment/barcode-assign-0.1/src/barcode_assign/: bc_count.rs  counts.rs  lib.rs
docs/: 10-vectors.md  20-guides-v1.md  20-sequencing.md  30-barcoding.md  30-guides-v1.md  40-barcodes-v1-181005.md  _config.yml  index.md
docs/_includes/: head.html  sidebar.html
library_v1/guide_choice/: targeting-log.txt  targeting.R
library_v1/guide_choice/output/: target-choices.bed
library_v1/guide_choice/work/: genome-cds-map.txt  genome-tss-map.txt
library_v1/guide_choice/yeast_grna/: Cargo.toml  download_data.sh  run.sh
mcglincy_2019/barcode_grna/: barcoding_stats.R  guide_stats.R  run.sh
mcglincy_2019/barcode_grna/figures/: barcoding_stats_out.txt  guide_stats_out.txt
mcglincy_2019/ivt_library/: analyze_ivt.R  filter_ivt.R  run.sh  samples.txt
mcglincy_2019/ivt_library/figures/: filter_ivt_out.txt
mcglincy_2019/phenotype/: analyze_barcodes.R  analyze_fitness.R  analyze_guides.R  barcode_heatmap.R  compare.R  deseq_barcodes.R  replicate_guides.R  run.sh  samples.txt  tabulate_guides.R  yorf_go.R
mcglincy_2019/phenotype/figures/: analyze_fitness_out.txt  analyze_guides_out.txt  compare_out.txt  model.coefficients.txt  nizm005-barcode-compare.csv  nizm005-essential-all.txt  replicates_out.txt  (+7 more)
mcglincy_2019/tstat/: growth_tstat.R  run.sh
(+13 files in other folders)
